<resources>
    <string name="app_name">Web Explorer</string>
    <string name="back">返回</string>
    <string name="searchbar"> 开始搜索</string>
    <string name="duochuangkou">0</string>
    <string name="title">网页标题</string>
    <string name="fileUrl">网址</string>
    <string name="one">第一个选项</string>
    <string name="two">第二个选项</string>
    <string name="multpage">99</string>
    <string name="action_back">back</string>
    <string name="newpage">新标签页</string>
    <string name="title_activity_srarch">srarchActivity</string>
    <string name="flash">刷新</string>
    <string name="Bookmark">收藏</string>
    <string name="mult">多窗口</string>
    <string name="menu">设置</string>
    <string name="multpage_cloas">关闭网页</string>
    <string name="new_tab">新标签页</string>
    <string name="type_text">键入文字</string>
    <string name="folder">文件夹</string>
    <string name="enter">确认</string>
    <string name="cancel">取消</string>
    <string name="openPageinNewWindow">在新窗口打开</string>


    <!-- 夜间，设置，下载，收藏，历史记录，分享，隐身，工具箱，电脑模式-->
    <string name="shezhi">设置</string>
    <string name="xiazai">下载</string>
    <string name="shoucang">收藏</string>
    <string name="lishijilu">历史记录</string>
    <string name="fenxiang">分享</string>
    <string name="yinshen">不记录历史</string>
    <string name="gongjuxiang">工具箱</string>
    <string name="diannaomoshi">请求桌面版网站</string>
    <string name="yejian">夜间</string>
    <string name="shuqian">书签</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag">标签</string>
    <string name="tagFliter">标签选择</string>
    <string name="history1">历史</string>
    <string name="date">日期选择</string>
    <string name="newTag">新标签</string>
    <string name="new_a_tag">新建标签</string>
    <string name="edit1">编辑</string>
    <string name="delete">删除</string>

    <!--历史记录条目菜单项资源 -->
    <string name="open">打开</string>
    <string name="open1">新标签页打开</string>
    <string name="delete_history_item">删除</string>
    <string name="add_to_Bookmark">添加到书签</string>
    <string name="thisweek">最近7天</string>
    <string name="thismonth">本月</string>
    <string name="month1">一个月前</string>
    <string name="month2">两个月前</string>
    <string name="month3">三个月前</string>
    <string name="month4">四个月前</string>
    <string name="month5">五个月前</string>
    <string name="uncategorized">未分类</string>
    <string name="whether_deleteTag">是否删除“标签”</string>
    <!--preference-->
    <string name="useCustomHomepage_key">home_page_default</string><!--是否使用自定义主页key-->
    <string name="homepageurl_key"> home_page_url</string><!--自定义主页网址key-->
    <!--<string name="searchengine_key">search_engine</string>--><!--默认搜索引擎key-->
    <!--<string name="searchengineList_key">search_engine_list</string>--><!--内置搜索引擎列表 的key-->
    <!-- <string name="customsearchengine_key">custom_search_engine</string>--><!--自定义搜索引擎的key，自定义的不一定会设置为默认，所以，这一项是为了在自定义的那项不是默认值时也能记住自定义的值-->
    <string name="customDownload_key">custom_download_listener</string><!--是否使用软件内置下载器key-->
    <!--<string name="userAgent_key">user_agent</string>--><!--默认浏览器标识key-->
    <!--<string name="userAgentList_key">useragent_list</string>--><!--浏览器标识列表key-->
    <!--<string name="deleteData_key">clean_data</string>--><!--清除数据key-->
    <!--<string name="textZoomPercentage_key">text_zoom</string>--><!--字体缩放key-->
    <!--<string name="textZoomList_key">text_zoom_list</string>--><!--字体缩放列表key-->
    <string name="resumeData_key">resume_data</string><!--是否打开恢复上次网址key-->
    <!--<string name="defaultDownloadPath_key">def_download_path</string>--><!--下载路径-->
    <!--<string name="defaultDownloadlimit_key">def_download_limit</string>--><!--下载数量限制-->
    <!--<string name="defaultDownloadthread_key">def_download_thread</string>--><!--下载线程数-->
    <string name="uploadMode_key">def_upload_mode</string><!--false则是自己写的方法，能上传所有文件，不去理会是什么type，默认是true，默认方式。-->
    <!--<string name="SearchViewStyle_key">searchview_style</string>--><!--搜索页面样式，false是旧的样式，true是新样式;废弃-->
    <string name="searchSuggest_key">search_suggest</string><!--是否使用搜索匹配，false是不启用，true是启用-->
    <!--<string name="useCookies">use_cookies</string>--><!--是否使用cookies的key-->
    <string name="useThirdCookies">use_third_cookies</string><!--是否使用第三方cookie的key-->
    <!--<string name="PictureMode">picture mode</string>--><!--图片模式的key，仅wifi下加载图片，一直加载图片-->
    <!--<string name="useJavascript">use_javascript</string>--><!--是否使用js的key-->
    <string name="donotTrack">dont_track</string><!--发送不跟踪请求的key-->
    <!--<string name="webRequestLocate">web_request_locate</string>--><!--是否允许站点访问地理位置key-->
    <string name="exitCleanData">exit_clean_data</string><!--退出时清除浏览数据-->

    <!--userAgent-->
    <string name="Chrome_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.106 Safari/537.36</string>
    <string name="FireFox_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:72.0) Gecko/20100101 Firefox/72.0</string>
    <string name="IE9_agent">Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; Trident/5.0</string>
    <string name="iPhone_agent">Mozilla/5.0 (iPhone; U; CPU iPhone OS 4_3_3 like Mac OS X; en-us) AppleWebKit/533.17.9 (KHTML, like Gecko) Version/5.0.2 Mobile/8J2 Safari/6533.18.5</string>
    <string name="默认_agent">null</string>

    <!--tag管理选项-->
    <string name="editBookmarkFolderName">编辑文件夹</string>
    <string name="deleteBookmarkFolder">删除文件夹</string>
    <string name="addBookmarkFolder">添加新文件夹</string>
    <string name="read_record">阅读列表</string>
    <string name="findText">在页面上查找</string>
    <string name="startDownloadButton">开始和暂停下载</string>
    <string name="deleteDownloadButton">删除下载任务</string>
    <string name="fileName">文件名称</string>
    <string name="downloadurl">下载地址</string>
    <string name="CancelallDownload">全部取消</string>
    <string name="startAllDownload">全部开始</string>
    <string name="downloading">正在下载</string>
    <string name="downloadFinish">已完成</string>
    <string name="downloadCancel">已取消</string>
    <string name="title_activity_start_page">StartPageActivity</string>
    <string name="searchEngine">搜索引擎</string>
    <string name="cleanData">清除数据</string>
    <string name="textZoom">字体缩放</string>
    <string name="resumeHistory">恢复上次打开的网页</string>
    <string name="downloadToolSelect">使用内置下载器</string>
    <string name="百度搜索">https://www.baidu.com/s?wd=</string>
    <string name="menuSet">设置</string>
    <string name="general">通常</string>
    <string name="privacy">隐私</string>
    <string name="theme">主题</string>
    <string name="about">关于</string>
    <string name="download_limit">同时下载数量限制</string>
    <string name="downloadFolder">下载文件夹</string>
    <string name="thread">下载线程数</string>
    <string name="backFolder">上一级</string>
    <string name="welcome_sentence">\t\t此应用还在早期构造阶段，接下来版本将会增添更多功能。</string>
    <string name="theStyle">样式</string>
    <string name="use_old_search_tool">使用新的搜索界面样式</string>
    <string name="use_search_matcher">使用搜索匹配</string>
    <string name="save_html_mode">使用系统的上传文件方式</string>
    <string name="saveToPdf">打印</string>
    <string name="saveTomht">保存网页</string>
    <string name="deleteCookies">清除cookies</string>
    <string name="deleteFormdata">清除表单数据</string>
    <string name="deleteCache">清除缓存</string>
    <string name="deleteHistory">清除历史记录</string>
    <string name="deleteLocalStorage">清除网页存储</string>
    <string name="big">大</string>
    <string name="small">小</string>
    <string name="reset">重置</string>
    <string name="pictureMode">图片模式</string>
    <string name="addJsExt">添加脚本</string>
    <string name="jsManager">JS管理器</string>
    <string name="name">名称</string>
    <string name="edit">键入文本</string>
    <string name="complete">完成</string>
    <string name="save">保存</string>
</resources>
