<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toool="http://schemas.android.com/apk/res-auto">

        <CheckBox
            android:id="@+id/clean_cookies"
            style="@style/MenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteCookies"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/clean_formdata"
            style="@style/MenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteFormdata" />

        <CheckBox
            android:id="@+id/clean_cache"
            style="@style/MenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteCache" />

        <CheckBox
            android:id="@+id/clean_history"
            style="@style/MenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteHistory" />

        <CheckBox
            android:id="@+id/clean_localstorage"
            style="@style/MenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteLocalStorage" />
    </LinearLayout>
