<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/downloadingFragment"
        android:title="@string/downloading"
        android:icon="@drawable/ic_file_download_black_24dp"
        app:itemTextColor="@drawable/bottom_select_text"/>
    <item
        android:id="@+id/downloadFinishFragment"
        android:title="@string/downloadFinish"
        android:icon="@drawable/ic_check_circle_black_24dp"
        app:itemTextColor="@drawable/bottom_select_text"/>
    <item
        android:id="@+id/downloadSettingFragment"
        android:title="@string/menuSet"
        android:icon="@drawable/ic_settings_applications_black_24dp"
        app:itemTextColor="@drawable/bottom_select_text"/>
</menu>