<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_flash"
        android:icon="@drawable/ic_cached_black_24dp"
        android:orderInCategory="100"
        android:title="@string/flash"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_star"
        android:icon="@drawable/ic_bookmark_border_black_24dp"
        android:orderInCategory="100"
        android:title="@string/star"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_mult"
        android:icon="@drawable/ic_flip_to_front_black_24dp"
        android:orderInCategory="100"
        android:title="@string/mult"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_view_headline_black_24dp"
        android:orderInCategory="100"
        android:title="@string/menu"
        app:showAsAction="always" />


</menu>