<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <TextView
        android:id="@+id/a3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/bg_ie"
        android:text="@string/yinshen"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/h1"
        app:layout_constraintEnd_toStartOf="@+id/v3"
        app:layout_constraintStart_toStartOf="@+id/v2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/a4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/bg_ie"
        android:text="@string/lishijilu"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/h1"
        app:layout_constraintEnd_toStartOf="@+id/v4"
        app:layout_constraintStart_toStartOf="@+id/v3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/a5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/bg_ie"
        android:text="@string/gongjuxiang"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/v4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/a6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/bg_ie"
        android:text="@string/shuqian"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/h2"
        app:layout_constraintEnd_toStartOf="@+id/v1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/h1" />

    <TextView
        android:id="@+id/a7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/bg_ie"
        android:text="@string/diannaomoshi"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/h2"
        app:layout_constraintEnd_toStartOf="@+id/v2"
        app:layout_constraintStart_toStartOf="@+id/v1"
        app:layout_constraintTop_toTopOf="@+id/h1" />

    <TextView
        android:id="@+id/a8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/bg_ie"
        android:text="@string/xiazai"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/h2"
        app:layout_constraintEnd_toStartOf="@+id/v3"
        app:layout_constraintStart_toStartOf="@+id/v2"
        app:layout_constraintTop_toTopOf="@+id/h1" />

    <TextView
        android:id="@+id/a9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/bg_ie"
        android:text="@string/yejian"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/h2"
        app:layout_constraintEnd_toStartOf="@+id/v4"
        app:layout_constraintStart_toStartOf="@+id/v3"
        app:layout_constraintTop_toTopOf="@+id/h1" />

    <TextView
        android:id="@+id/a10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/bg_ie"
        android:text="@string/shezhi"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/h2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/v4"
        app:layout_constraintTop_toTopOf="@+id/h1" />

    <TextView
        android:id="@+id/a2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/bg_ie"
        android:text="@string/Bookmark"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/h1"
        app:layout_constraintEnd_toStartOf="@+id/v2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/v1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <TextView
        android:id="@+id/a1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/bg_ie"
        android:text="@string/fenxiang"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/h1"
        app:layout_constraintEnd_toStartOf="@+id/v1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="160dp" />

</androidx.constraintlayout.widget.ConstraintLayout>